Changes and bugfixes new: We now show a simple fade animation instead of sliding down on start new: We now hide main widget options if their visibility is tured off new: Rearranged and renamed some settings to be more intutive fix: We now switch to the last selected main widget style more reliably fix: One-handed mode should now completely push elements to the bottom fix: Fade background elements when Advanced Settings are opened to avoid inconsistent blurred background dev: Delayed load of intersection observer

--- a/animations.css
+++ b/animations.css
@@ -115,12 +115,14 @@
 }
 
 .startup_slide_down {
-    animation: startup_slide_down .5s;
+    padding-top: 10vh;
+    /* opacity: 0; */
+    /* animation: startup_slide_down .5s;
     animation-fill-mode: both;
-    animation-iteration-count: 1
+    animation-iteration-count: 1 */
 }
 
-@keyframes startup_slide_down {
+/* @keyframes startup_slide_down {
     0% {
         padding-top: 0
     }
@@ -128,7 +130,7 @@
     100% {
         padding-top: 10vh
     }
-}
+} */
 
 .animation_carousel_left_hide {
     animation: animation_carousel_left_hide 175ms;
